# agent_torero

./: .gitignore  README.md  pyproject.toml  report.md
db/: chroma.sqlite3
knowledge/: all_keywords.txt
src/agent_torero/: config.py  crew.py  llm.py  main.py
src/agent_torero/config/: agents.yaml  tasks.yaml
src/agent_torero/handlers/: github.py  jira.py  keywords.py
src/agent_torero/tools/: github_tool.py  jira_tool.py  keywords.py
tests/: test_keywords.py
