[project]
name = "agent_torero"
version = "0.1.0"
description = "agent_torero using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
agent_torero = "agent_torero.main:run"
run_crew = "agent_torero.main:run"
train = "agent_torero.main:train"
replay = "agent_torero.main:replay"
test = "agent_torero.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
